--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "license": "MIT",
   "scripts": {
     "start": "",
-    "dev": "ts-node-dev --transpile-only src/server.ts"
+    "dev": "ts-node-dev --transpile-only src/server.ts",
+    "test": "jest"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.182",
+    "@swc/jest": "^0.2.21",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.1",
     "@types/node": "^17.0.31",
     "@types/nodemailer": "^6.4.4",
+    "jest": "^28.1.0",
     "prisma": "^3.13.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
